Fixed bug, added z-index

--- a/src/yalb.css
+++ b/src/yalb.css
@@ -9,6 +9,7 @@ html, body {
     height:100%;
     top:0;
     background:rgba(0,0,0,0.5);
+    z-index:10000;
     /* Comment in to disable yalb-closing by clicking on the wrapper */
     /* pointer-events:none; */
 }
